--- a/404.md
+++ b/404.md
@@ -85,6 +85,6 @@ permalink: /404.html
     <li><a class="back" href="index">Back</a></li>
   </ul>
 </div>
-  <h1>Oh no! You just visited our page that's currently under development. Please check our website regularly.</h1>
+  <h1>Oh no!! You just visited our page that's currently under development. Please check our website regularly.</h1>
 </body>
 </html>
